--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'net.researchgate.release' version '2.6.0'
+}
+
 group 'com.github1gmx'
 version '1.0.0-SNAPSHOT'
 
@@ -12,4 +16,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+release {
+    tagTemplate = '$version'
 }
