--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@ plugins {
 }
 
 group 'com.github1gmx'
-version '1.0.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'distribution'
+apply from: "gradle/autoversioning.gradle"
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -18,6 +20,46 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+distTar {
+    compression = Compression.GZIP
+    extension = 'tar.gz'
+}
+
+distributions {
+    main {
+        contents {
+            from("$projectDir")
+            exclude('.gitignore')
+            exclude('.travis.yml')
+            exclude('*.iml')
+            exclude('out')
+            exclude('build')
+        }
+    }
+}
+
 release {
-    tagTemplate = '$version'
+    tagTemplate = 'v$version'
+}
+
+processResources {
+
+    inputs.property "version", project.version
+
+    filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: [version: project.version])
 }
