--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,9 @@ cache:
     - $HOME/.gradle
 
 script:
+  - ./gradlew build
+
+after_success:
   - if [[ $TRAVIS_COMMIT_MESSAGE == *"[major release]"* ]]; then ./gradlew build release; println '>>MAJOR RELEASE<<' ; SNAPSHOT_BUILD = 0; fi ;
   - if [[ $TRAVIS_COMMIT_MESSAGE == *"[minor release]"* ]]; then ./gradlew build release; println '>>MINOR RELEASE<<' ; SNAPSHOT_BUILD = 0; fi ;
   - if [[ $TRAVIS_COMMIT_MESSAGE == *"[patch release]"* ]]; then ./gradlew build release; println '>>PATCH RELEASE<<' ; SNAPSHOT_BUILD = 0; fi ;
-  - if [[ ($TRAVIS_COMMIT_MESSAGE != *"[major release]"*) && ($TRAVIS_COMMIT_MESSAGE != *"[minor release]"*) && ($TRAVIS_COMMIT_MESSAGE != *"[patch release]"*) ]] then ./gradlew build; fi ;
-
-after_success:
-  - println '>>SUCCESS!<<'
-
-
-
