--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,4 @@ script:
   - ./gradlew build
 
 after_success:
-  - if [[ $TRAVIS_COMMIT_MESSAGE == *"[major release]"* ]]; then ./gradlew build release; println '>>MAJOR RELEASE<<' ; SNAPSHOT_BUILD = 0; fi ;
-  - if [[ $TRAVIS_COMMIT_MESSAGE == *"[minor release]"* ]]; then ./gradlew build release; println '>>MINOR RELEASE<<' ; SNAPSHOT_BUILD = 0; fi ;
-  - if [[ $TRAVIS_COMMIT_MESSAGE == *"[patch release]"* ]]; then ./gradlew build release; println '>>PATCH RELEASE<<' ; SNAPSHOT_BUILD = 0; fi ;
+  - if [[ $TRAVIS_COMMIT_MESSAGE == "[release]" ]]; then ./gradlew release; println '>>MAJOR RELEASE<<' ; fi ;
