--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ cache:
     - $HOME/.gradle
 
 script:
-  - ./gradlew build
+  - if [[ $TRAVIS_COMMIT_MESSAGE =~ "[release]" ]]; then ./gradlew build; println '>>SNAPSHOT<<' ; fi ;
+  - if [[ $TRAVIS_COMMIT_MESSAGE == "[release]" ]]; then ./gradlew build release; println '>>RELEASE<<' ; fi ;
 
 after_success:
   - if [[ $TRAVIS_COMMIT_MESSAGE == "[release]" ]]; then ./gradlew release; println '>>MAJOR RELEASE<<' ; fi ;
