--- a/gradle/autoversioning.gradle
+++ b/gradle/autoversioning.gradle
@@ -1,7 +1,7 @@
 ext.semanticVersion = SemanticVersion.from(version)
-project.ext.'gradle.release.useAutomaticVersion' = 'true'
-project.ext.releaseVersion=semanticVersion.releaseVersion()
-project.ext.newVersion=semanticVersion.newVersion()
+project.ext.'release.useAutomaticVersion' = 'true'
+project.ext.release.releaseVersion=semanticVersion.releaseVersion()
+project.ext.release.newVersion=semanticVersion.newVersion()
 
 class SemanticVersion {
     int major
