--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,4 @@ cache:
     - $HOME/.gradle
 
 script:
-  - ./gradlew build release
-
-after_success:
-  - if [[ $TRAVIS_COMMIT_MESSAGE == "[release]" ]]; then ./gradlew release; println '>>MAJOR RELEASE<<' ; fi ;
+  - ./gradlew --info build release
